Mon Jan 22 21:02:19 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.c, daemon/slave.c, daemon/display.c, daemon/xdmcp.c: fix
	  some xdmcp bugs, crashes, etc... random cleanup, autologin on the
	  first display started only, when killing things make sure kill
	  succeeded before waitpid, otherwise probably the process was
	  already dead and we'd just wait forever.  But don't expect XDMCP
	  to actually work now, it doesn't.

Mon Jan 22 02:59:22 2001  George Lebl <jirka@5z.com>

	* daemon/misc.c, daemon/server.[ch], daemon/slave.c,
	  daemon/display.c:  Race fixes, remove old code, cleanups,
	  leak fixes, use the same X server process and use HUP to
	  reset it

Wed Jan 10 19:25:54 2001  George Lebl <jirka@5z.com>

	* configure.in, *: raise version and put in some notes in relevant
	  files

Wed Jan 10 13:57:56 2001  George Lebl <jirka@5z.com>

	* daemon/display.c, daemon/gdm.[ch], daemon/server.c,
	  daemon/slave.c:  A little bit of cleanup, if the greeter
	  segs 5 times during 40 seconds, unmanage the display
	  so that we don't hog the console.

Wed Jan 10 07:22:29 2001  George Lebl <jirka@5z.com>

	* daemon/server.[ch], daemon/slave.c: When slave is exitting
	  we should kill the old X server really.  It should be possible to
	  reuse, but currently this was leading to hangs.  Also only
	  wait for the server if the kill worked to avoid hanging in
	  waitpid.

Wed Jan 10 03:20:48 2001  George Lebl <jirka@5z.com>

	* config/gdm.conf.in: add empty line for automatic login (disabled)

	* daemon/server.c: If the server aborts during startup try restarting
	  it about 5 times

Wed Jan 10 02:32:52 2001  George Lebl <jirka@5z.com>

	* daemon/verify.h, daemon/verify-*.[ch], daemon/slave.c: For
	  autologin we have to do the pam dance to setup stuff nicely.

Wed Jan 10 01:13:54 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch], daemon/slave.c, gui/gdmlogin.c,
	  config/gdm.conf.in:  Move the background stuff to greeter as that
	  makes more sense
