@@ -1,3 +1,7 @@
+Tue Jan 23 03:34:29 2001  George Lebl <jirka@5z.com>
+
+	* daemon/xdmcp.c: some cleanup in hunt for a fix of xdmcp
+
 Mon Jan 22 21:02:19 2001  George Lebl <jirka@5z.com>
 
 	* daemon/gdm.c, daemon/slave.c, daemon/display.c, daemon/xdmcp.c: fix
